Adjusting image spacing, fixes #4

--- a/scss/partials/_captions.scss
+++ b/scss/partials/_captions.scss
@@ -21,7 +21,7 @@
 }
 
 figure.wp-caption {
-  margin: 0;
+  margin: 0 0 2em 0;
 	&.alignleft {
 		margin-right: 1.5em;
 	}
